fixed text wrapping

--- a/src/styles/Components/Summary.scss
+++ b/src/styles/Components/Summary.scss
@@ -52,6 +52,10 @@
             margin: -1px -1px 0px 0px;
             width: 100%;
         
+            p {
+                line-break: anywhere;
+            }
+
             .crossmark {
                 text-align: center;
             }
